testing memory utilisation with ZipInputStream class